Fix text alignment in certificate

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -314,6 +314,7 @@ video {
 .content-container-price {
   width: 50%;
   margin: auto;
+  text-align: center;
 }
 
 .content-container-price p,
